Noted double-click action for SSAP window

--- a/splat/src/docs/sun243.tex
+++ b/splat/src/docs/sun243.tex
@@ -1246,6 +1246,9 @@ If you want \SPLAT\ to match the coordinate systems and fluxes of the spectra
 then remember to select the
 \submenuitem{Options}{Match coordinates and/or fluxes} item in the plot window.
 
+To view a single spectrum quickly just double click on its row. This will
+download the spectrum and display it in its own plot window.
+
 \subheading{Implementation status}
 
 SSAP is a protocol being developed by the IVOA
